src/app/shared/components/newsContentComponent/newsContentComponent.component.css
.mat-card-design {
    max-width: 550px;
    margin-left:40px;
    min-height: 482px;
    max-height: 482px;
}

.mat-card-no-pic{
    max-width: 550px;
    min-height: 182px !important;
    max-height: 182px !important;
}

.mat-card-inner-desing{
    max-width: 550px;
    min-height: 495px;
}

.mat-card-small-middle-design{
    max-width: 350px;
    margin-left:30px;
    min-height: 380px;
    max-height: 380px;
}

.mat-card-small-right-design{
    max-width: 350px;
    margin-right:80px;
    min-height: 380px;
    max-height: 380px;
}

.mat-card-small-left-design{
    max-width: 350px;
    margin-left:80px;
    min-height: 380px;
    max-height: 380px;
}

.picture{
    max-height: 345px;
}

.picture-inner{
    max-height: 290px;
}

.picture:hover{
    cursor: pointer;
}

.news-title:hover{
    cursor: pointer;
}

.tiny-picture{
    max-height: 230px;
    min-height: 230px;
}

.tiny-picture:hover{
    cursor: pointer;
}

.author-color{
    color:#2068A0;
}

.time-color{
    color:#737373;
}

.time-space{
    padding-left: 15px;
}

.more-info-space{
    padding-right: 20px;
}

.mat-content-last-row{
    margin-top:10px;
}

.push{
    flex-grow: 1;
}

@media 
only screen and (max-width: 760px),
(min-device-width: 768px) and (max-device-width: 1024px)  {

    .small-window-mat-card-design {
        max-width: 90vw;
        margin-left: 20px;
        min-height: 0px;
    }

    .small-window-mat-card-left-desing{
        max-width: 90vw;
        margin-left: 20px;
        min-height: 0px;
    }

    .small-window-mat-card-middle-design{
        max-width: 90vw;
        margin-left: 20px;
        min-height: 0px;
    }

    .small-window-mat-card-right-design{
        max-width: 90vw;
        margin-left: 20px;
        min-height: 0px;
        margin-right: 0px;
    }

    .small-window-mat-card-inner-design{
        max-width: 90vw;
        min-height: 0px;
    }

}

